	Reported by Mark D. Baushke <mdb@cvshome.org>.

2004-11-02  Bruno Haible  <bruno@clisp.org>

	* setenv.h (unsetenv): Define as a macro if the system's unsetenv()
	function returns void.

2004-10-04  Paul Eggert  <eggert@cs.ucla.edu>

	* unlocked-io.h: Don't worry about USE_UNLOCKED_IO; that's now
	the includer's responsibility.

2004-08-06  Paul Eggert  <eggert@cs.ucla.edu>

	* safe-read.c: Import changes from coreutils.

2004-08-06  Paul Eggert  <eggert@cs.ucla.edu>

	* quotearg.c, quotearg.h: Import changes from coreutils.

2004-08-06  Paul Eggert  <eggert@cs.ucla.edu>

	* setenv.c: Import changes from coreutils.

2004-08-03  Simon Josefsson  <jas@extundo.com>

	* progname.h: Don't include stdbool.h.

2004-07-16  Bruno Haible  <bruno@clisp.org>

	* mbswidth.h: Add extern "C" for C++.
	Reported by Albert Chin-A-Young <china@thewrittenword.com>.

2003-09-09  Paul Eggert  <eggert@twinsun.com>

	* memmove.c, memset.c: Include <stddef.h>.
	Use types required by C89 in prototype.

2003-09-08  Paul Eggert  <eggert@twinsun.com>

	* atexit.c (atexit): Define using a prototype.

2004-12-10  Bruno Haible  <bruno@clisp.org>

	* obstack.h: Update from current gnulib version.
	* obstack.c: Update from current gnulib version.
	Reported by Raphaël Zhou <xzhou@tlmcom.fr>.

2004-11-23  Bruno Haible  <bruno@clisp.org>

	* gettext.h [!ENABLE_NLS]: When using GNU libstdc++, include
	<libintl.h> early.
	Reported by Peter Breitenlohner <peb@mppmu.mpg.de>.

2004-10-07  Bruno Haible  <bruno@clisp.org>

	* gen-lbrkprop.c (output_tables): Emit a GPL copyright notice.
	* lbrkprop.h: Update.

2004-09-11  Bruno Haible  <bruno@clisp.org>

	* allocsa.valgrind: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2004-09-01  Bruno Haible  <bruno@clisp.org>

	* config.charset: Add support for Darwin 7.

2004-08-08  Bruno Haible  <bruno@clisp.org>

	* pathname.h (FILE_SYSTEM_PREFIX_LEN): Renamed from
	FILESYSTEM_PREFIX_LEN.
	* progreloc.c: Likewise.